tests/fixtures/LatestTests/ObjectTests/errors/invalid_assignment.fg
/; EXPECT_ERROR: InvalidAssignmentToAnObject
type Person = {
    name: str
    age: int
}

var p: Person = {
    name: "John",
    age: 30
}

p = Nir